# ChangeLog for media-gfx/ristretto
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Dec 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Fixed make check

  17 Nov 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Moved XFCE_CONFIG to pkg_setup

  12 Jul 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Added missing xfconf dependency

  28 Jun 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Enable Xfce-4.6 wallpaper switching

  26 Feb 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Sync keywords

  02 Dec 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Sync dependencies and keywords with the main tree

  17 Nov 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Sync keywords

  29 Oct 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Added libxfcegui4 dependency

  04 Oct 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Added libexif dependency and improved DESCRIPTION

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Added missing dependencies on thunar and libxfce4util

  20 Aug 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Added debug to IUSE

  13 Aug 2007; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
  Added ~x86

  13 Jun 2007; Christoph Mende <angelos@gentoo.org> +ristretto-9999.ebuild:
  Initial import
