@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD ristretto-9999.ebuild 937 RMD160 b65339a0d958db3d75bf519a2d3fb237611c859a SHA1 8d38cb0c37a74ba17b5fc9efba59b43bc4b72226 SHA256 9e95a84ae2cf2d3df70d028fe09ab291fbac12e520956dbaa33d3821033d06fb
-MISC ChangeLog 1508 RMD160 a45279dc250bbb5e5371c3b5450a2175a6bf6109 SHA1 3daa0bb956d2ff56f591ee04150883a3d4ae2b03 SHA256 7258bed76331203dda0daf5e5f8e208ef79658fe16772caa94c09d08ea05bc03
+EBUILD ristretto-9999.ebuild 906 RMD160 0bcb5ce3678c973940acfee6408f373e962d2804 SHA1 383ef6ae76d60ab1e192bde1635aace66d68ebbd SHA256 278fc78393ccd814b7543c60ebcf597606f5262dc6fed86fa7a1c7b73f8521ba
+MISC ChangeLog 1660 RMD160 cb1433f0ee3cf7e52d9564b0c1e3cfb71fe2f7e2 SHA1 e32313700c585a37a4d47051455d37e3a3c3fac2 SHA256 35f7a703ea77b0a6b55cebda97a4cf06ac0da88145ae018d91ef531f0f342cc3
 MISC metadata.xml 241 RMD160 8274414165a5ef273221964ac5f0c2a611d9bedb SHA1 9f95785d90786251fd4c9b0d0e3393bcea168fb6 SHA256 d1762f65f6370ddc6a26722d6ca0d3b8c1a5a8ba09d06bcbb209037abf5695d4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkk+jxcACgkQKhnDs22gwa/2RgCfc0oapW+flwLk8Jr/HXeBdj5K
-MkgAnjlypdlPuYp/fHUxzIjMz5XiP2yo
-=VWhe
+iEYEARECAAYFAklAFX4ACgkQKhnDs22gwa/jfACgsE8JUFmwD5j8S4E4EYPlzSI4
+65oAnRka8s+aQ7WeXE5s2N471akSRX4F
+=sVrI
 -----END PGP SIGNATURE-----
