@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Dec 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
+  Removed exo dependency, fixed thunar dependency and made USE=xfce default
+
   09 Dec 2008; Christoph Mende <angelos@gentoo.org> ristretto-9999.ebuild:
   Fixed make check
 
